# wunderunner

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2025-12-09-comprehensive-analysis-design.md  2025-12-09-pydantic-graph-migration-design.md  2025-12-11-service-detection-impl.md  2025-12-11-services-integration-tests-design.md  2025-12-11-services-integration-tests-impl.md  2025-12-12-integration-tests-impl.md  2025-12-18-oauth-auth.md  2025-12-18-research-plan-implement-design.md  2025-12-18-rpi-pipeline-00-overview.md  2025-12-18-rpi-pipeline-01-models.md  2025-12-18-rpi-pipeline-02-research.md  2025-12-18-rpi-pipeline-03-plan.md  2025-12-18-rpi-pipeline-04-implement.md  2025-12-18-rpi-pipeline-05-errors.md  2025-12-18-rpi-pipeline-06-cli.md  2025-12-18-rpi-pipeline-implementation.md
src/wunderunner/: __init__.py  exceptions.py  settings.py
src/wunderunner/activities/: __init__.py  docker.py  dockerfile.py  fixer.py  project.py  service_detection.py  services.py  validation.py
src/wunderunner/agents/: __init__.py  tools.py
src/wunderunner/agents/analysis/: __init__.py  (+6 more)
src/wunderunner/auth/: __init__.py  client.py  models.py  pkce.py  server.py  storage.py
src/wunderunner/cli/: auth.py  main.py
src/wunderunner/models/: __init__.py  analysis.py  context.py  generation.py  validation.py
src/wunderunner/pipeline/: __init__.py  artifacts.py  models.py
src/wunderunner/storage/: __init__.py  context.py
src/wunderunner/templates/: __init__.py  services.py
src/wunderunner/validation/: __init__.py  dockerfile.py
src/wunderunner/workflows/: __init__.py  base.py  containerize.py  run.py  state.py
tests/: conftest.py  test_activities_service_detection.py  test_activity_docker.py  test_activity_dockerfile.py  test_activity_fixer.py  test_activity_project.py  test_activity_validation.py  test_agent_build_strategy.py  test_agent_code_style.py  test_agent_compose.py  test_agent_dockerfile.py  test_agent_env_vars.py  test_agent_fixer.py  test_agent_improvement.py  test_agent_project_structure.py  test_agent_regression.py  test_agent_secrets.py  test_agent_services.py  test_agent_summarizer.py  test_agent_tools.py  test_auth_anthropic_flow.py  test_auth_client.py  test_auth_e2e.py  test_auth_exceptions.py  test_auth_models.py  test_auth_pkce.py  test_auth_provider_anthropic.py  test_auth_server.py  test_auth_storage.py  test_cli.py  test_cli_auth.py  test_compose_with_services.py  test_exceptions.py  test_models_analysis.py  test_models_context.py  test_pipeline_artifacts.py  test_pipeline_constraints.py  test_pipeline_error_research.py  test_pipeline_fix_plan.py  test_pipeline_implement_logs.py  (+24 more)
(+35 files in other folders)
