[project]
name = "wxr"
version = "0.1.1"
description = "AI-powered Docker configuration generator with self-healing builds"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Wunderlabs", email = "office+wxr@wunderlabs.dev" }
]
keywords = ["docker", "dockerfile", "container", "ai", "devops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic-ai>=0.0.40",
    "pydantic-graph>=0.0.40",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
]

[project.urls]
Homepage = "https://github.com/wunderlabs/wunderunner"
Repository = "https://github.com/wunderlabs/wunderunner"
Issues = "https://github.com/wunderlabs/wunderunner/issues"

[project.optional-dependencies]
dev = [
    "logfire>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
wunderunner = "wunderunner.cli.main:app"
wxr = "wunderunner.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wunderunner"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
